clusters/dev/vanitydomain/vanitydomain.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vanitydomain
---
apiVersion: v1
kind: Service
metadata:
  name: vanitydomain
  namespace: vanitydomain
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: vanitydomain
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vanitydomain
  namespace: vanitydomain
spec:
  selector:
    matchLabels:
      app: vanitydomain
  replicas: 1
  template:
    metadata:
      labels:
        app: vanitydomain
    spec:
      containers:
        - name: vanitydomain
          image: registry.digitalocean.com/cr-cdb-sf03-dev/vanitydomain:0.0.1
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "100m"
              memory: "32Mi"
            requests:
              cpu: "50m"
              memory: "16Mi"
